--- a/homepage/src/components/Header/Header.css
+++ b/homepage/src/components/Header/Header.css
@@ -1,5 +1,6 @@
 .header {
-    background-color: rgb(25, 38, 97);
-    position: fixed;
+    background-color: rgb(139, 147, 184);
     width: 100%;
+    height: 2em;
+    flex: none;
 }
